<?xml version="1.0"?>
<package format="2">
  <name>franka_panda_controller_swc</name>
  <version>0.7.0</version>
  <description>The franka_panda_controller_swc package</description>
  <maintainer email="s4555103@uq.net.au">Vincent Chen</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/iyawx/Franka_panda_controller_swc</url>
  <url type="bugtracker">https://github.com/iyawx/Franka_panda_controller_swc/issues</url>
  <author>Shih-Wen Chen</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- <depend>roscpp</depend> = <build_depend>roscpp</build_depend> = <exec_depend>roscpp</exec_depend> -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!-- Other tools can request additional information be placed here -->
  <export>
	<controller_interface plugin="${prefix}/franka_panda_controller_swc_plugin.xml"/>
  </export>
</package>
  
  <!-- Moveit -->
  <!-- <depend>eigen_conversions</depend> -->
  <!-- <depend>tf</depend> -->
  <!-- <depend>tf_conversions</depend> -->
